// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestBuilder allows for pagination 1`] = `
Array [
  "SomeResource?%24top=2&%24skip=5",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder caches 1`] = `
Array [
  "SomeResource",
  Object {},
  Object {
    "cacheOptions": Object {
      "ttl": 20,
    },
  },
]
`;

exports[`RequestBuilder chains mixed-format expands 1`] = `
Array [
  "SomeResource?%24expand=Dogs%2FPuppies%2CCats%2CKittens",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder chains multiple expands 1`] = `
Array [
  "SomeResource?%24expand=Puppies%2CCats",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder chains multiple filters 1`] = `
Array [
  "SomeResource?%24filter=%28A%20eq%20Ab%29%20or%20%28B%20eq%20Bc%29",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder combines multiple filters with an and operator 1`] = `
Array [
  "SomeResource?%24filter=%28Something%20eq%20SomethingElse%29%20and%20%28AnotherThing%20eq%20SomethingDifferent%29",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder combines multiple filters with an or operator 1`] = `
Array [
  "SomeResource?%24filter=%28Something%20eq%20SomethingElse%29%20or%20%28AnotherThing%20eq%20SomethingDifferent%29",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder doesn't filter if filter is blank 1`] = `
Array [
  "SomeResource",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder doesn't filterOneOf if array is blank 1`] = `
Array [
  "SomeResource",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder expands 1`] = `
Array [
  "SomeResource?%24expand=Puppies",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder filters 1`] = `
Array [
  "SomeResource?%24filter=Something%20eq%20SomethingElse",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder filters by one of a list of conditions 1`] = `
Array [
  "SomeResource?%24filter=%28Id%20eq%20123%29%20or%20%28Id%20eq%20456%29%20or%20%28Id%20eq%20789%29",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder finds by id 1`] = `
Array [
  "SomeResource/1",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder gets requests 1`] = `
Array [
  "SomeResource",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder gets the first result 1`] = `"SomeResource?%24top=1"`;

exports[`RequestBuilder orders 1`] = `
Array [
  "SomeResource?%24orderby=MyField%20asc",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder orders in custom order 1`] = `
Array [
  "SomeResource?%24orderby=MyField%20desc",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder selects 1`] = `
Array [
  "SomeResource?%24select=Id",
  Object {},
  Object {},
]
`;

exports[`RequestBuilder transforms result shapes 1`] = `
Object {
  "a": "yo",
}
`;

exports[`RequestBuilder transforms result shapes 2`] = `
Object {
  "b": "neigh",
}
`;
